--- a/www/langs/custom.zh-cn.json
+++ b/www/langs/custom.zh-cn.json
@@ -122,5 +122,46 @@
   "tr-dnsmasq-negcache": "负面缓存",
   "tr-dnsmasq-auto-optimization": "自动优化",
   "tr-dnsmasq-optimization-disabled": "优化已禁用",
-  "tr-feedback-link": "论坛"
+  "tr-feedback-link": "论坛",
+
+  "tr-tui-main-menu": "主菜单",
+  "tr-tui-select": "选择",
+  "tr-tui-back": "返回",
+  "tr-tui-exit": "退出",
+  "tr-tui-yes": "是",
+  "tr-tui-no": "否",
+  "tr-tui-ok": "确定",
+  "tr-tui-cancel": "取消",
+  "tr-tui-review-configuration": "审查并应用配置",
+  "tr-tui-view-device-info": "查看设备信息",
+  "tr-tui-view-package-list": "查看软件包列表",
+  "tr-tui-view-config-vars": "查看配置变量",
+  "tr-tui-view-postinst": "查看 postinst.sh",
+  "tr-tui-view-setup": "查看 setup.sh",
+  "tr-tui-apply-config": "应用配置",
+  "tr-tui-device-information": "设备信息",
+  "tr-tui-package-list": "软件包列表",
+  "tr-tui-config-vars": "配置变量",
+  "tr-tui-no-packages": "未选择软件包",
+  "tr-tui-no-config-vars": "未设置配置变量",
+  "tr-tui-postinst-not-found": "未找到 postinst.sh 文件",
+  "tr-tui-setup-not-found": "未找到 setup.sh 文件",
+  "tr-tui-apply-confirm": "应用此配置？\n\n这将：\n1. 通过 postinst.sh 安装软件包\n2. 通过 setup.sh 应用设置\n3. 可选择重启\n\n继续？",
+  "tr-tui-installing-packages": "正在执行软件包安装...",
+  "tr-tui-applying-config": "正在应用系统配置...",
+  "tr-tui-config-applied": "配置应用成功！\n\n现在重启？",
+  "tr-tui-auto-config-applied": "已应用自动配置！",
+  "tr-tui-use-auto-config": "使用此自动检测的配置？",
+  "tr-tui-package-categories": "软件包类别",
+  "tr-tui-select-category": "选择类别：",
+  "tr-tui-space-toggle": "空格键=切换",
+  "tr-tui-ui-mode-select": "选择 UI 模式：",
+  "tr-tui-ui-whiptail": "whiptail（对话框式 TUI）",
+  "tr-tui-ui-simple": "simple（列表式 TUI）",
+  "tr-tui-ui-choice": "选择",
+  "tr-tui-ui-installing": "正在安装 whiptail...",
+  "tr-tui-ui-install-success": "whiptail 安装成功！",
+  "tr-tui-ui-install-failed": "安装失败，使用简单模式",
+  "tr-tui-gua": "GUA",
+  "tr-tui-pd": "PD"
 }
