--- a/www/langs/custom.zh-tw.json
+++ b/www/langs/custom.zh-tw.json
@@ -39,47 +39,50 @@
   "tr-lan-ipv6-address": "LAN IPv6位址",
   "tr-ssh-interface": "SSH介面",
   "tr-ssh-port": "SSH連接埠",
-  "tr-lan-dhcp-start": "DHCP起始",
-  "tr-lan-dhcp-limit": "DHCP限制",
-  "tr-lan-dhcp-lease-time": "DHCP租期",
-  "tr-wifi-configuration": "Wi-Fi設定",
-  "tr-wifi-disabled": "Wi-Fi已停用",
-  "tr-wifi-enabled": "Wi-Fi已啟用",
-  "tr-wifi-radio0": "2.4GHz頻段",
-  "tr-wifi-radio1": "5GHz頻段",
-  "tr-ssid-2ghz": "SSID (2.4GHz)",
-  "tr-ssid-5ghz": "SSID (5GHz)",
-  "tr-password-2ghz": "密碼 (2.4GHz)",
-  "tr-password-5ghz": "密碼 (5GHz)",
-  "tr-encryption": "加密",
-  "tr-wifi-country-code": "國家代碼",
-  "tr-wifi-advanced": "進階Wi-Fi設定",
-  "tr-wmm-enabled": "WMM (QoS)",
-  "tr-ieee80211w": "802.11w管理訊框保護",
-  "tr-80211w-disabled": "停用",
-  "tr-80211w-optional": "選用",
-  "tr-80211w-required": "必需",
+  "tr-flow-offloading-type": "流量卸載類型",
+  "tr-restore-backup-path": "還原備份路徑",
+  "tr-wi-fi-configuration": "Wi-Fi設定",
+  "tr-wi-fi-mode": "Wi-Fi模式",
+  "tr-wi-fi-ssid": "Wi-Fi SSID",
+  "tr-wi-fi-password": "Wi-Fi密碼",
+  "tr-mobility-domain": "移動域",
+  "tr-min-snr": "最小SNR",
+  "tr-standard": "標準",
+  "tr-usteer": "Usteer",
+  "tr-disabled": "停用",
+  "tr-wifi-optimization-disabled": "Wi-Fi已停用",
   "tr-internet-connection": "網際網路連線",
-  "tr-manual-setting": "手動設定",
-  "tr-manual-setting-warning": "手動設定模式：自動偵測已停用。請手動設定。",
+  "tr-connection-type": "連線類型",
   "tr-auto": "自動",
-  "tr-auto-detection": "自動偵測",
-  "tr-dhcp": "DHCP",
   "tr-pppoe": "PPPoE",
   "tr-dslite": "DS-Lite",
   "tr-mape": "MAP-E",
-  "tr-ap-mode": "存取點模式",
+  "tr-ap": "AP模式",
+  "tr-auto-detection": "自動偵測",
+  "tr-dhcp": "DHCP",
+  "tr-pppoe-credentials": "PPPoE認證資訊",
   "tr-pppoe-username": "使用者名稱",
   "tr-pppoe-password": "密碼",
-  "tr-dslite-aftr": "AFTR位址",
-  "tr-mape-settings": "MAP-E設定",
-  "tr-mape-ipv4addr": "IPv4位址",
-  "tr-mape-ip6prefix": "IPv6字首",
-  "tr-mape-peeraddr": "對等位址",
-  "tr-mape-psidlen": "PSID長度",
-  "tr-mape-psid": "PSID",
-  "tr-mape-offset": "位移",
-  "tr-ap-dhcp-enabled": "DHCP已啟用",
+  "tr-ds-lite-settings": "DS-Lite設定",
+  "tr-dslite-aftr-type": "AFTR類型",
+  "tr-dslite-area": "地區",
+  "tr-dslite-aftr-ipv6-address": "AFTR位址",
+  "tr-dslite-notice1": "注意: 實際值可能會有所不同。",
+  "tr-mape-type": "位址類型",
+  "tr-br": "對等位址 (BR)",
+  "tr-ea-len": "EA長度",
+  "tr-ipv4-prefix": "IPv4位址",
+  "tr-ipv4-prefix-length": "IPv4字首長度",
+  "tr-ipv4-prefix-range": "IPv4字首範圍",
+  "tr-ipv6-prefix": "IPv6字首",
+  "tr-ipv6-prefix-range": "IPv6字首範圍",
+  "tr-psid-offset": "PSID位移",
+  "tr-psid-length": "PSID長度",
+  "tr-gua-prefix": "GUA字首",
+  "tr-mape-notice1": "注意: 實際值可能會有所不同。",
+  "tr-mape-notice2": "注意: 連接埠 1-1023 為特權連接埠。詳情請諮詢您的ISP。",
+  "tr-ap-network-settings": "AP網路設定",
+  "tr-ap-ip-address": "IP位址",
   "tr-ap-gateway": "閘道",
   "tr-tuning": "調整",
   "tr-netopt-optimization": "動態網路最佳化",
@@ -122,5 +125,45 @@
   "tr-dnsmasq-negcache": "負面快取",
   "tr-dnsmasq-auto-optimization": "自動最佳化",
   "tr-dnsmasq-optimization-disabled": "最佳化已停用",
-  "tr-feedback-link": "論壇"
+  "tr-feedback-link": "論壇",
+  "tr-tui-main-menu": "主選單",
+  "tr-tui-select": "選擇",
+  "tr-tui-back": "返回",
+  "tr-tui-exit": "離開",
+  "tr-tui-yes": "是",
+  "tr-tui-no": "否",
+  "tr-tui-ok": "確定",
+  "tr-tui-cancel": "取消",
+  "tr-tui-review-configuration": "檢視並套用設定",
+  "tr-tui-view-device-info": "檢視裝置資訊",
+  "tr-tui-view-package-list": "檢視軟體包清單",
+  "tr-tui-view-config-vars": "檢視設定變數",
+  "tr-tui-view-postinst": "檢視postinst.sh",
+  "tr-tui-view-setup": "檢視setup.sh",
+  "tr-tui-apply-config": "套用設定",
+  "tr-tui-device-information": "裝置資訊",
+  "tr-tui-package-list": "軟體包清單",
+  "tr-tui-config-vars": "設定變數",
+  "tr-tui-no-packages": "未選擇軟體包",
+  "tr-tui-no-config-vars": "未設定設定變數",
+  "tr-tui-postinst-not-found": "找不到postinst.sh檔案",
+  "tr-tui-setup-not-found": "找不到setup.sh檔案",
+  "tr-tui-apply-confirm": "套用此設定？\n\n將執行以下操作：\n1. 透過postinst.sh安裝軟體包\n2. 透過setup.sh套用設定\n3. 選擇性重新啟動\n\n繼續？",
+  "tr-tui-installing-packages": "正在執行軟體包安裝...",
+  "tr-tui-applying-config": "正在套用系統設定...",
+  "tr-tui-config-applied": "設定套用成功！\n\n立即重新啟動？",
+  "tr-tui-auto-config-applied": "自動設定已套用！",
+  "tr-tui-use-auto-config": "使用此自動偵測的設定？",
+  "tr-tui-package-categories": "軟體包類別",
+  "tr-tui-select-category": "選擇類別:",
+  "tr-tui-space-toggle": "空白鍵=切換",
+  "tr-tui-ui-mode-select": "選擇UI模式:",
+  "tr-tui-ui-whiptail": "whiptail (對話框式TUI)",
+  "tr-tui-ui-simple": "simple (清單式TUI)",
+  "tr-tui-ui-choice": "選擇",
+  "tr-tui-ui-installing": "正在安裝whiptail...",
+  "tr-tui-ui-install-success": "whiptail安裝成功！",
+  "tr-tui-ui-install-failed": "安裝失敗，使用simple模式",
+  "tr-tui-gua": "GUA",
+  "tr-tui-pd": "PD"
 }
