--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -143,7 +143,6 @@
     "tr-feedback-link": "フォーラム",
 
     "tr-tui-main-menu": "メインメニュー",
-    "tr-tui-review-configuration": "設定の確認と適用",
     "tr-tui-select": "選択",
     "tr-tui-back": "戻る",
     "tr-tui-exit": "終了",
@@ -152,15 +151,12 @@
     "tr-tui-ok": "OK",
     "tr-tui-cancel": "キャンセル",
     
-    "tr-tui-view-device-info": "デバイス情報を表示",
-    "tr-tui-view-package-list": "パッケージ一覧を表示",
-    "tr-tui-view-config-vars": "設定変数を表示",
-    "tr-tui-view-postinst": "postinst.shを表示",
-    "tr-tui-view-setup": "setup.shを表示",
-    "tr-tui-apply-config": "設定を適用",
-    "tr-tui-device-information": "デバイス情報",
-    "tr-tui-package-list": "パッケージ一覧",
-    "tr-tui-config-vars": "設定変数",
+    "tr-tui-view-device-info": "デバイス情報",
+    "tr-tui-view-package-list": "パッケージ一覧",
+    "tr-tui-view-config-vars": "設定変数",
+    "tr-tui-view-postinst": "postinst.sh",
+    "tr-tui-view-setup": "setup.sh",
+    "tr-tui-apply-config": "設定確認と適用",
     "tr-tui-no-packages": "パッケージが選択されていません",
     "tr-tui-no-config-vars": "設定変数がありません",
     "tr-tui-postinst-not-found": "postinst.shファイルが見つかりません",
