--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -156,7 +156,7 @@
     "tr-tui-view-config-vars": "設定変数",
     "tr-tui-view-postinst": "postinst.sh",
     "tr-tui-view-setup": "setup.sh",
-    "tr-tui-apply-config": "設定確認と適用",
+    "tr-tui-review-configuration": "設定確認と適用",
     "tr-tui-no-packages": "パッケージが選択されていません",
     "tr-tui-no-config-vars": "設定変数がありません",
     "tr-tui-postinst-not-found": "postinst.shファイルが見つかりません",
@@ -168,8 +168,6 @@
     "tr-tui-auto-config-applied": "自動設定を適用しました！",
     "tr-tui-use-auto-config": "この自動検出された設定を使用しますか？",
     
-    "tr-tui-package-categories": "パッケージカテゴリ",
-    "tr-tui-select-category": "カテゴリを選択:",
     "tr-tui-space-toggle": "スペース=切替",
     
     "tr-tui-ui-mode-select": "UIモードを選択:",
