--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -162,8 +162,8 @@
     "tr-tui-no-config-vars": "設定変数がありません",
     "tr-tui-postinst-not-found": "postinst.shファイルが見つかりません",
     "tr-tui-setup-not-found": "setup.shファイルが見つかりません",
-    "tr-tui-apply-confirm": "以下を実行します：\n1. postinst.shでパッケージをインストール\n2. setup.shで設定を適用\n3. 必要に応じて再起動\n\n続行しますか？",
-    "tr-tui-installing-packages": "パッケージをインストール中...",
+    "tr-tui-apply-confirm": "以下を実行します：\n1. postinst.shでパッケージをインストール\n2. setup.shで設定を適用\n\n実行後に再起動の確認があります。\n\n今すぐ実行しますか？"
+    "tr-tui-installing-packages": "パッケージをインストール中",
     "tr-tui-applying-config": "システム設定を適用中...",
     "tr-tui-config-applied": "設定の適用が完了しました！\n\n今すぐ再起動しますか？",
     "tr-tui-auto-config-applied": "自動設定を適用しました！",
@@ -175,7 +175,7 @@
     "tr-tui-ui-whiptail": "whiptail (ダイアログベースTUI)",
     "tr-tui-ui-simple": "simple (リストベースTUI)",
     "tr-tui-ui-choice": "選択",
-    "tr-tui-ui-installing": "whiptailをインストール中...",
+    "tr-tui-ui-installing": "whiptailをインストール中",
     "tr-tui-ui-install-success": "whiptailのインストールに成功しました！",
     "tr-tui-ui-install-failed": "インストール失敗、simpleモードを使用します",   
     "tr-tui-gua": "GUA",
