--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -162,10 +162,14 @@
     "tr-tui-no-config-vars": "設定変数がありません",
     "tr-tui-postinst-not-found": "postinst.shファイルが見つかりません",
     "tr-tui-setup-not-found": "setup.shファイルが見つかりません",
-    "tr-tui-apply-confirm": "以下を実行します：\n1. postinst.shでパッケージをインストール\n2. setup.shで設定を適用\n\n実行後に再起動の確認があります。\n\n今すぐ実行しますか？"
+    "tr-tui-apply-confirm-title": "以下を実行します：",
+    "tr-tui-apply-confirm-step1": "1. postinst.shでパッケージをインストール",
+    "tr-tui-apply-confirm-step2": "2. setup.shで設定を適用",
+    "tr-tui-apply-confirm-note": "実行後に再起動の確認があります。",
+    "tr-tui-apply-confirm-question": "今すぐ実行しますか？"
     "tr-tui-installing-packages": "パッケージをインストール中",
-    "tr-tui-applying-config": "システム設定を適用中...",
-    "tr-tui-config-applied": "設定の適用が完了しました！\n\n今すぐ再起動しますか？",
+    "tr-tui-applying-config": "システム設定を適用中",
+    "tr-tui-config-applied": "設定の適用が完了しました！",
     "tr-tui-auto-config-applied": "自動設定を適用しました！",
     "tr-tui-use-auto-config": "この自動検出された設定を使用しますか？",
     
