--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -165,7 +165,7 @@
     "tr-tui-apply-confirm-title": "以下を実行します：",
     "tr-tui-apply-confirm-step1": "1. postinst.shでパッケージをインストール",
     "tr-tui-apply-confirm-step2": "2. setup.shで設定を適用",
-    "tr-tui-apply-confirm-note": "実行後に再起動の確認があります。",
+    "tr-tui-apply-confirm-step3": "3. 再起動（確認有）",
     "tr-tui-apply-confirm-question": "今すぐ実行しますか？",
     "tr-tui-installing-packages": "パッケージをインストール中",
     "tr-tui-applying-config": "システム設定を適用中",
