--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -8,9 +8,9 @@
     "tr-base-size": "Base",
     "tr-added-size": "Added",
     "tr-total-size": "Total",
-    "tr-package-size-snapshot-unavailable": "Note: Package size information is not available for SNAPSHOT builds",
-    "tr-package-size-note": "Note: Language and dependency packages are not included",
-    "tr-uci-size-limit": "Note: File size limit: 20480 bytes: 20.00 KB",
+    "tr-package-size-snapshot-unavailable": "※ Package size information is not available for SNAPSHOT builds",
+    "tr-package-size-note": "※ Language and dependency packages are not included",
+    "tr-uci-size-limit": "※ File size limit: 20480 bytes: 20.00 KB",
     
     "tr-import-settings": "Import",
     "tr-export-settings": "Export",
@@ -21,11 +21,11 @@
     "tr-asu-status-error": "Error",
     "tr-asu-status-200": "ASU server is reachable. Status: {status}",
     "tr-asu-status-500": "ASU server responded with an internal error. Status: {status}",
-    "tr-asu-status-unreachable": "ASU server responded with an unexpected status: {status}",
+    "tr-asu-status-unreachable": "ASU server responded with an unexpected status. Status: {status}",
     "tr-asu-status-networkfail": "Failed to reach the ASU server: {error}",
     
     "tr-extended-info": "Region and ISP Information",
-    "tr-loading": "Loading...",
+    "tr-loading": "Loading…",
     "tr-notice": "Notice",
     "tr-country": "Area",
     "tr-timezone": "Timezone",
@@ -33,13 +33,13 @@
     "tr-isp": "ISP",
     "tr-as": "AS Number",
     "tr-ip-address": "Address",
-    "tr-method": "Method",
+    "tr-method": "Connection Type",
 
     "tr-basic-configuration": "Basic Configuration",
     "tr-language": "Language",
     "tr-device-name": "Device Name",
     "tr-root-password": "Root Password",
-    "tr-lan-ipv4-address" : "LAN IPv4 Address",
+    "tr-lan-ipv4-address": "LAN IPv4 Address",
     "tr-lan-ipv6-address": "LAN IPv6 Address",
     "tr-ssh-interface": "SSH Interface",
     "tr-ssh-port": "SSH Port",
@@ -51,7 +51,7 @@
     "tr-wi-fi-ssid": "Wi-Fi SSID",
     "tr-wi-fi-password": "Wi-Fi Password",
     "tr-mobility-domain": "Mobility Domain",
-    "tr-min-snr": "Min SNR",
+    "tr-min-snr": "Minimum SNR",
     "tr-standard": "Standard",
     "tr-usteer": "Usteer",
     "tr-disabled": "Disabled",
@@ -59,7 +59,7 @@
     
     "tr-internet-connection": "Internet Connection",
     "tr-connection-type": "Connection Type",
-    "tr-auto": "Automatic",
+    "tr-auto": "AUTO",
     "tr-pppoe": "PPPoE",
     "tr-dslite": "DS-Lite",
     "tr-mape": "MAP-E",
@@ -72,7 +72,7 @@
     "tr-pppoe-username": "Username",
     "tr-pppoe-password": "Password",
 
-    "tr-ds-lite-settings": "DS-Lite Settings",
+    "tr-dslite-settings": "DS-Lite Settings",
     "tr-dslite-aftr-type": "AFTR Type",
     "tr-dslite-area": "Area",
     "tr-dslite-aftr-ipv6-address": "AFTR Address",
@@ -110,7 +110,7 @@
     "tr-network-device-backlog": "Network Device Backlog",
     "tr-socket-max-connections": "Socket Maximum Connections",
     "tr-tcp-congestion-control": "TCP Congestion Control",
-    "tr-cubic-default": "cubic (Default)",
+    "tr-cubic-default": "cubic (default)",
     "tr-bbr": "BBR",
     "tr-reno": "Reno",
     "tr-disabled-mode": "Disabled Mode",
@@ -150,38 +150,40 @@
     "tr-tui-no": "No",
     "tr-tui-ok": "OK",
     "tr-tui-cancel": "Cancel",
+    "tr-tui-choice": "Choice",
     
-    "tr-tui-review-configuration": "Review & Apply Configuration",
     "tr-tui-view-device-info": "View Device Information",
     "tr-tui-view-package-list": "View Package List",
     "tr-tui-view-config-vars": "View Configuration Variables",
     "tr-tui-view-postinst": "View postinst.sh",
     "tr-tui-view-setup": "View setup.sh",
-    "tr-tui-apply-config": "Apply Configuration",
-    "tr-tui-device-information": "Device Information",
-    "tr-tui-package-list": "Package List",
-    "tr-tui-config-vars": "Configuration Variables",
+    "tr-tui-review-configuration": "Review & Apply Configuration",
+    "tr-tui-apply": "Apply Configuration",
     "tr-tui-no-packages": "No packages selected",
     "tr-tui-no-config-vars": "No configuration variables set",
     "tr-tui-postinst-not-found": "postinst.sh file not found",
     "tr-tui-setup-not-found": "setup.sh file not found",
-    "tr-tui-apply-confirm": "Apply this configuration?\n\nThis will:\n1. Install packages via postinst.sh\n2. Apply settings via setup.sh\n3. Optionally reboot\n\nContinue?",
-    "tr-tui-installing-packages": "Executing package installation...",
-    "tr-tui-applying-config": "Applying system configuration...",
-    "tr-tui-config-applied": "Configuration applied successfully!\n\nReboot now?",
+    "tr-tui-apply-confirm-title": "The following will be executed:",
+    "tr-tui-apply-confirm-step1": "1. Install packages via postinst.sh",
+    "tr-tui-apply-confirm-step2": "2. Apply settings via setup.sh",
+    "tr-tui-apply-confirm-step3": "3. Reboot (with confirmation)",
+    "tr-tui-apply-confirm-question": "Execute now?",
+    "tr-tui-installing-packages": "Installing packages",
+    "tr-tui-applying-config": "Applying system configuration",
+    "tr-tui-config-applied": "Configuration applied successfully!",
+    "tr-tui-reboot-question": "Reboot now?",
     "tr-tui-auto-config-applied": "Auto-configuration applied!",
     "tr-tui-use-auto-config": "Use this auto-detected configuration?",
-    "tr-tui-package-categories": "Package Categories",
-    "tr-tui-select-category": "Select category:",
+    
     "tr-tui-space-toggle": "Space=toggle",
     
     "tr-tui-ui-mode-select": "Select UI mode:",
     "tr-tui-ui-whiptail": "whiptail (dialog-based TUI)",
     "tr-tui-ui-simple": "simple (list-based TUI)",
     "tr-tui-ui-choice": "Choice",
-    "tr-tui-ui-installing": "Installing whiptail...",
+    "tr-tui-ui-installing": "Installing whiptail",
     "tr-tui-ui-install-success": "whiptail installed successfully!",
-    "tr-tui-ui-install-failed": "Failed to install, using simple mode",
+    "tr-tui-ui-install-failed": "Installation failed, using simple mode",
     "tr-tui-gua": "GUA",
     "tr-tui-pd": "PD"
 }
