--- a/www/langs/custom.zh-cn.json
+++ b/www/langs/custom.zh-cn.json
@@ -1,167 +1,189 @@
 {
-  "tr-custom-packages": "已安装的软件包",
-  "tr-custom-defaults": "首次启动时执行的脚本 (uci-defaults)",
-  "tr-postinst": "Postinst(软件包安装脚本)",
-  "tr-uci": "UCI-defaults(启动配置脚本)",
-  "tr-package-search": "软件包搜索",
-  "tr-add-commands": "添加命令",
-  "tr-base-size": "基础",
-  "tr-added-size": "添加",
-  "tr-total-size": "总计",
-  "tr-package-size-snapshot-unavailable": "※ SNAPSHOT版本无法获取软件包大小信息",
-  "tr-package-size-note": "※ 不包括语言和依赖软件包",
-  "tr-uci-size-limit": "※ 文件大小限制: 20480 bytes: 20.00 KB",
-  "tr-import-settings": "导入",
-  "tr-export-settings": "导出",
-  "tr-asu-status-checking": "检查中...",
-  "tr-asu-status-online": "在线",
-  "tr-asu-status-offline": "离线",
-  "tr-asu-status-error": "错误",
-  "tr-asu-status-200": "ASU服务器可访问。状态: {status}",
-  "tr-asu-status-500": "ASU服务器响应了内部错误。状态: {status}",
-  "tr-asu-status-unreachable": "ASU服务器响应异常。状态: {status}",
-  "tr-asu-status-networkfail": "无法连接到ASU服务器: {error}",
-  "tr-extended-info": "地区和ISP信息",
-  "tr-loading": "加载中…",
-  "tr-notice": "通知",
-  "tr-country": "地区",
-  "tr-timezone": "时区",
-  "tr-zonename": "区域名称",
-  "tr-isp": "ISP",
-  "tr-as": "AS号",
-  "tr-ip-address": "地址",
-  "tr-method": "连接方式",
-  "tr-basic-configuration": "基本设置",
-  "tr-language": "语言",
-  "tr-device-name": "设备名称",
-  "tr-root-password": "root密码",
-  "tr-lan-ipv4-address": "LAN IPv4地址",
-  "tr-lan-ipv6-address": "LAN IPv6地址",
-  "tr-ssh-interface": "SSH接口",
-  "tr-ssh-port": "SSH端口",
-  "tr-lan-dhcp-start": "DHCP起始",
-  "tr-lan-dhcp-limit": "DHCP限制",
-  "tr-lan-dhcp-lease-time": "DHCP租期",
-  "tr-wifi-configuration": "Wi-Fi设置",
-  "tr-wifi-disabled": "Wi-Fi已禁用",
-  "tr-wifi-enabled": "Wi-Fi已启用",
-  "tr-wifi-radio0": "2.4GHz频段",
-  "tr-wifi-radio1": "5GHz频段",
-  "tr-ssid-2ghz": "SSID (2.4GHz)",
-  "tr-ssid-5ghz": "SSID (5GHz)",
-  "tr-password-2ghz": "密码 (2.4GHz)",
-  "tr-password-5ghz": "密码 (5GHz)",
-  "tr-encryption": "加密",
-  "tr-wifi-country-code": "国家代码",
-  "tr-wifi-advanced": "高级Wi-Fi设置",
-  "tr-wmm-enabled": "WMM (QoS)",
-  "tr-ieee80211w": "802.11w管理帧保护",
-  "tr-80211w-disabled": "禁用",
-  "tr-80211w-optional": "可选",
-  "tr-80211w-required": "必需",
-  "tr-internet-connection": "互联网连接",
-  "tr-manual-setting": "手动设置",
-  "tr-manual-setting-warning": "手动设置模式：自动检测已禁用。请手动配置。",
-  "tr-auto": "自动",
-  "tr-auto-detection": "自动检测",
-  "tr-dhcp": "DHCP",
-  "tr-pppoe": "PPPoE",
-  "tr-dslite": "DS-Lite",
-  "tr-mape": "MAP-E",
-  "tr-ap-mode": "接入点模式",
-  "tr-pppoe-username": "用户名",
-  "tr-pppoe-password": "密码",
-  "tr-dslite-aftr": "AFTR地址",
-  "tr-mape-settings": "MAP-E设置",
-  "tr-mape-ipv4addr": "IPv4地址",
-  "tr-mape-ip6prefix": "IPv6前缀",
-  "tr-mape-peeraddr": "对等地址",
-  "tr-mape-psidlen": "PSID长度",
-  "tr-mape-psid": "PSID",
-  "tr-mape-offset": "偏移量",
-  "tr-ap-dhcp-enabled": "DHCP已启用",
-  "tr-ap-gateway": "网关",
-  "tr-tuning": "调优",
-  "tr-netopt-optimization": "动态网络优化",
-  "tr-netopt-optimization-disabled": "优化已禁用",
-  "tr-manual": "手动",
-  "tr-auto-mode": "自动模式",
-  "tr-auto-optimization": "自动优化",
-  "tr-manual-mode": "手动模式",
-  "tr-manual-settings": "手动设置",
-  "tr-tcp-read-memory": "TCP读内存",
-  "tr-tcp-write-memory": "TCP写内存",
-  "tr-connection-tracking-max": "连接追踪最大值",
-  "tr-network-device-backlog": "网络设备积压",
-  "tr-socket-max-connections": "套接字最大连接数",
-  "tr-tcp-congestion-control": "TCP拥塞控制",
-  "tr-cubic-default": "cubic(默认)",
-  "tr-bbr": "BBR",
-  "tr-reno": "Reno",
-  "tr-disabled-mode": "禁用模式",
-  "tr-basic-system-features": "基本系统功能",
-  "tr-system-management": "系统管理",
-  "tr-network-management": "网络管理",
-  "tr-wifi-management": "Wi-Fi管理",
-  "tr-modem-support": "调制解调器支持",
-  "tr-security-tools": "安全工具",
-  "tr-system-monitoring": "系统监控",
-  "tr-diagnostic-tools": "网络诊断工具",
-  "tr-system-tools": "系统管理工具",
-  "tr-themes-dashboard": "主题和仪表板",
-  "tr-utilities": "实用工具",
-  "tr-usb-storage": "USB存储支持",
-  "tr-file-sharing": "文件共享",
-  "tr-dns-privacy": "DNS & 隐私",
-  "tr-dnsmasq-settings": "DNS服务器优化",
-  "tr-dnsmasq-mode": "DNS服务器模式",
-  "tr-dnsmasq-auto": "自动",
-  "tr-dnsmasq-manual": "手动",
-  "tr-dnsmasq-disabled": "禁用",
-  "tr-dnsmasq-cache": "缓存大小",
-  "tr-dnsmasq-negcache": "负面缓存",
-  "tr-dnsmasq-auto-optimization": "自动优化",
-  "tr-dnsmasq-optimization-disabled": "优化已禁用",
-  "tr-feedback-link": "论坛",
+    "tr-custom-packages": "已安装的软件包",
+    "tr-custom-defaults": "首次启动时执行的脚本 (uci-defaults)",
+    "tr-postinst": "Postinst（软件包安装脚本）",
+    "tr-uci": "UCI-defaults（启动配置脚本）",
+    "tr-package-search": "软件包搜索",
+    "tr-add-commands": "添加命令",
+    "tr-base-size": "基础",
+    "tr-added-size": "已添加",
+    "tr-total-size": "总计",
+    "tr-package-size-snapshot-unavailable": "※ SNAPSHOT版本不提供软件包大小信息",
+    "tr-package-size-note": "※ 不包含语言和依赖软件包",
+    "tr-uci-size-limit": "※ 文件大小限制：20480 字节：20.00 KB",
+    
+    "tr-import-settings": "导入",
+    "tr-export-settings": "导出",
+    
+    "tr-asu-status-checking": "检查中...",
+    "tr-asu-status-online": "在线",
+    "tr-asu-status-offline": "离线",
+    "tr-asu-status-error": "错误",
+    "tr-asu-status-200": "ASU 服务器可访问。状态：{status}",
+    "tr-asu-status-500": "ASU 服务器响应了内部错误。状态：{status}",
+    "tr-asu-status-unreachable": "ASU 服务器响应了意外状态。状态：{status}",
+    "tr-asu-status-networkfail": "无法访问 ASU 服务器：{error}",
+    
+    "tr-extended-info": "地区和 ISP 信息",
+    "tr-loading": "加载中…",
+    "tr-notice": "通知",
+    "tr-country": "地区",
+    "tr-timezone": "时区",
+    "tr-zonename": "区域名称",
+    "tr-isp": "ISP",
+    "tr-as": "AS 号码",
+    "tr-ip-address": "地址",
+    "tr-method": "连接类型",
 
-  "tr-tui-main-menu": "主菜单",
-  "tr-tui-select": "选择",
-  "tr-tui-back": "返回",
-  "tr-tui-exit": "退出",
-  "tr-tui-yes": "是",
-  "tr-tui-no": "否",
-  "tr-tui-ok": "确定",
-  "tr-tui-cancel": "取消",
-  "tr-tui-review-configuration": "审查并应用配置",
-  "tr-tui-view-device-info": "查看设备信息",
-  "tr-tui-view-package-list": "查看软件包列表",
-  "tr-tui-view-config-vars": "查看配置变量",
-  "tr-tui-view-postinst": "查看 postinst.sh",
-  "tr-tui-view-setup": "查看 setup.sh",
-  "tr-tui-apply-config": "应用配置",
-  "tr-tui-device-information": "设备信息",
-  "tr-tui-package-list": "软件包列表",
-  "tr-tui-config-vars": "配置变量",
-  "tr-tui-no-packages": "未选择软件包",
-  "tr-tui-no-config-vars": "未设置配置变量",
-  "tr-tui-postinst-not-found": "未找到 postinst.sh 文件",
-  "tr-tui-setup-not-found": "未找到 setup.sh 文件",
-  "tr-tui-apply-confirm": "应用此配置？\n\n这将：\n1. 通过 postinst.sh 安装软件包\n2. 通过 setup.sh 应用设置\n3. 可选择重启\n\n继续？",
-  "tr-tui-installing-packages": "正在执行软件包安装...",
-  "tr-tui-applying-config": "正在应用系统配置...",
-  "tr-tui-config-applied": "配置应用成功！\n\n现在重启？",
-  "tr-tui-auto-config-applied": "已应用自动配置！",
-  "tr-tui-use-auto-config": "使用此自动检测的配置？",
-  "tr-tui-package-categories": "软件包类别",
-  "tr-tui-select-category": "选择类别：",
-  "tr-tui-space-toggle": "空格键=切换",
-  "tr-tui-ui-mode-select": "选择 UI 模式：",
-  "tr-tui-ui-whiptail": "whiptail（对话框式 TUI）",
-  "tr-tui-ui-simple": "simple（列表式 TUI）",
-  "tr-tui-ui-choice": "选择",
-  "tr-tui-ui-installing": "正在安装 whiptail...",
-  "tr-tui-ui-install-success": "whiptail 安装成功！",
-  "tr-tui-ui-install-failed": "安装失败，使用简单模式",
-  "tr-tui-gua": "GUA",
-  "tr-tui-pd": "PD"
+    "tr-basic-configuration": "基本配置",
+    "tr-language": "语言",
+    "tr-device-name": "设备名称",
+    "tr-root-password": "Root 密码",
+    "tr-lan-ipv4-address": "LAN IPv4 地址",
+    "tr-lan-ipv6-address": "LAN IPv6 地址",
+    "tr-ssh-interface": "SSH 接口",
+    "tr-ssh-port": "SSH 端口",
+    "tr-flow-offloading-type": "流量卸载类型",
+    "tr-restore-backup-path": "恢复备份路径",
+
+    "tr-wi-fi-configuration": "Wi-Fi 配置",
+    "tr-wi-fi-mode": "Wi-Fi 模式",
+    "tr-wi-fi-ssid": "Wi-Fi SSID",
+    "tr-wi-fi-password": "Wi-Fi 密码",
+    "tr-mobility-domain": "移动域",
+    "tr-min-snr": "最小 SNR",
+    "tr-standard": "标准",
+    "tr-usteer": "Usteer",
+    "tr-disabled": "禁用",
+    "tr-wifi-optimization-disabled": "Wi-Fi 已禁用",
+    
+    "tr-internet-connection": "互联网连接",
+    "tr-connection-type": "连接类型",
+    "tr-auto": "自动",
+    "tr-pppoe": "PPPoE",
+    "tr-dslite": "DS-Lite",
+    "tr-mape": "MAP-E",
+    "tr-ap": "AP 模式",
+
+    "tr-auto-detection": "自动检测",
+    "tr-dhcp": "DHCP",
+
+    "tr-pppoe-credentials": "PPPoE 凭据",
+    "tr-pppoe-username": "用户名",
+    "tr-pppoe-password": "密码",
+
+    "tr-dslite-settings": "DS-Lite 设置",
+    "tr-dslite-aftr-type": "AFTR 类型",
+    "tr-dslite-area": "地区",
+    "tr-dslite-aftr-ipv6-address": "AFTR 地址",
+    "tr-dslite-notice1": "注意：实际值可能有所不同。",
+
+    "tr-mape-type": "地址类型",
+    "tr-br": "对等地址 (BR)",
+    "tr-ea-len": "EA 长度",
+    "tr-ipv4-prefix": "IPv4 地址",
+    "tr-ipv4-prefix-length": "IPv4 前缀长度",
+    "tr-ipv4-prefix-range": "IPv4 前缀范围",
+    "tr-ipv6-prefix": "IPv6 前缀",
+    "tr-ipv6-prefix-range": "IPv6 前缀范围",
+    "tr-psid-offset": "PSID 偏移",
+    "tr-psid-length": "PSID 长度",
+    "tr-gua-prefix": "GUA 前缀",
+    "tr-mape-notice1": "注意：实际值可能有所不同。",
+    "tr-mape-notice2": "注意：端口号 1-1023 为特权端口。详情请咨询您的 ISP。",
+
+    "tr-ap-network-settings": "AP 网络设置",
+    "tr-ap-ip-address": "IP 地址",
+    "tr-ap-gateway": "网关",
+
+    "tr-tuning": "调优",
+    "tr-netopt-optimization": "动态网络优化",
+    "tr-netopt-optimization-disabled": "优化已禁用",
+    "tr-manual": "手动",
+    "tr-auto-mode": "自动模式",
+    "tr-auto-optimization": "自动优化",
+    "tr-manual-mode": "手动模式",
+    "tr-manual-settings": "手动设置",
+    "tr-tcp-read-memory": "TCP 读取内存",
+    "tr-tcp-write-memory": "TCP 写入内存",
+    "tr-connection-tracking-max": "连接跟踪最大值",
+    "tr-network-device-backlog": "网络设备积压",
+    "tr-socket-max-connections": "套接字最大连接数",
+    "tr-tcp-congestion-control": "TCP 拥塞控制",
+    "tr-cubic-default": "cubic（默认）",
+    "tr-bbr": "BBR",
+    "tr-reno": "Reno",
+    "tr-disabled-mode": "禁用模式",
+
+    "tr-basic-system-features": "基本系统功能",
+    "tr-system-management": "系统管理",
+    "tr-network-management": "网络管理",
+    "tr-wifi-management": "Wi-Fi 管理",
+    "tr-modem-support": "调制解调器支持",
+    "tr-security-tools": "安全工具",
+    "tr-system-monitoring": "系统监控",
+    "tr-diagnostic-tools": "网络诊断工具",
+    "tr-system-tools": "系统管理工具",
+    "tr-themes-dashboard": "主题和仪表板",
+    "tr-utilities": "实用工具",
+    "tr-usb-storage": "USB 存储支持",
+    "tr-file-sharing": "文件共享",
+    "tr-dns-privacy": "DNS 和隐私",
+    
+    "tr-dnsmasq-settings": "DNS 服务器优化",
+    "tr-dnsmasq-mode": "DNS 服务器模式",
+    "tr-dnsmasq-auto": "自动",
+    "tr-dnsmasq-manual": "手动",
+    "tr-dnsmasq-disabled": "禁用",
+    "tr-dnsmasq-cache": "缓存大小",
+    "tr-dnsmasq-negcache": "负缓存",
+    "tr-dnsmasq-auto-optimization": "自动优化",
+    "tr-dnsmasq-optimization-disabled": "优化已禁用",
+
+    "tr-feedback-link": "论坛",
+
+    "tr-tui-main-menu": "主菜单",
+    "tr-tui-select": "选择",
+    "tr-tui-back": "返回",
+    "tr-tui-exit": "退出",
+    "tr-tui-yes": "是",
+    "tr-tui-no": "否",
+    "tr-tui-ok": "确定",
+    "tr-tui-cancel": "取消",
+    "tr-tui-choice": "选择",
+    
+    "tr-tui-view-device-info": "查看设备信息",
+    "tr-tui-view-package-list": "查看软件包列表",
+    "tr-tui-view-config-vars": "查看配置变量",
+    "tr-tui-view-postinst": "查看 postinst.sh",
+    "tr-tui-view-setup": "查看 setup.sh",
+    "tr-tui-review-configuration": "查看并应用配置",
+    "tr-tui-apply": "应用配置",
+    "tr-tui-no-packages": "未选择软件包",
+    "tr-tui-no-config-vars": "未设置配置变量",
+    "tr-tui-postinst-not-found": "未找到 postinst.sh 文件",
+    "tr-tui-setup-not-found": "未找到 setup.sh 文件",
+    "tr-tui-apply-confirm-title": "将执行以下操作：",
+    "tr-tui-apply-confirm-step1": "1. 通过 postinst.sh 安装软件包",
+    "tr-tui-apply-confirm-step2": "2. 通过 setup.sh 应用设置",
+    "tr-tui-apply-confirm-step3": "3. 重启（需确认）",
+    "tr-tui-apply-confirm-question": "现在执行吗？",
+    "tr-tui-installing-packages": "正在安装软件包",
+    "tr-tui-applying-config": "正在应用系统配置",
+    "tr-tui-config-applied": "配置应用成功！",
+    "tr-tui-reboot-question": "现在重启吗？",
+    "tr-tui-auto-config-applied": "已应用自动配置！",
+    "tr-tui-use-auto-config": "使用此自动检测的配置吗？",
+    
+    "tr-tui-space-toggle": "空格键=切换",
+    
+    "tr-tui-ui-mode-select": "选择 UI 模式：",
+    "tr-tui-ui-whiptail": "whiptail（基于对话框的 TUI）",
+    "tr-tui-ui-simple": "simple（基于列表的 TUI）",
+    "tr-tui-ui-choice": "选择",
+    "tr-tui-ui-installing": "正在安装 whiptail",
+    "tr-tui-ui-install-success": "whiptail 安装成功！",
+    "tr-tui-ui-install-failed": "安装失败，使用简单模式",
+    "tr-tui-gua": "GUA",
+    "tr-tui-pd": "PD"
 }
