--- a/www/langs/custom.zh-tw.json
+++ b/www/langs/custom.zh-tw.json
@@ -1,169 +1,189 @@
 {
-  "tr-custom-packages": "已安裝的軟體包",
-  "tr-custom-defaults": "首次啟動時執行的指令碼 (uci-defaults)",
-  "tr-postinst": "Postinst(軟體包安裝指令碼)",
-  "tr-uci": "UCI-defaults(啟動設定指令碼)",
-  "tr-package-search": "軟體包搜尋",
-  "tr-add-commands": "新增命令",
-  "tr-base-size": "基礎",
-  "tr-added-size": "新增",
-  "tr-total-size": "總計",
-  "tr-package-size-snapshot-unavailable": "※ SNAPSHOT版本無法取得軟體包大小資訊",
-  "tr-package-size-note": "※ 不包括語言和相依軟體包",
-  "tr-uci-size-limit": "※ 檔案大小限制: 20480 bytes: 20.00 KB",
-  "tr-import-settings": "匯入",
-  "tr-export-settings": "匯出",
-  "tr-asu-status-checking": "檢查中...",
-  "tr-asu-status-online": "線上",
-  "tr-asu-status-offline": "離線",
-  "tr-asu-status-error": "錯誤",
-  "tr-asu-status-200": "ASU伺服器可存取。狀態: {status}",
-  "tr-asu-status-500": "ASU伺服器回應了內部錯誤。狀態: {status}",
-  "tr-asu-status-unreachable": "ASU伺服器回應異常。狀態: {status}",
-  "tr-asu-status-networkfail": "無法連線到ASU伺服器: {error}",
-  "tr-extended-info": "地區和ISP資訊",
-  "tr-loading": "載入中…",
-  "tr-notice": "通知",
-  "tr-country": "地區",
-  "tr-timezone": "時區",
-  "tr-zonename": "區域名稱",
-  "tr-isp": "ISP",
-  "tr-as": "AS號",
-  "tr-ip-address": "位址",
-  "tr-method": "連線方式",
-  "tr-basic-configuration": "基本設定",
-  "tr-language": "語言",
-  "tr-device-name": "裝置名稱",
-  "tr-root-password": "root密碼",
-  "tr-lan-ipv4-address": "LAN IPv4位址",
-  "tr-lan-ipv6-address": "LAN IPv6位址",
-  "tr-ssh-interface": "SSH介面",
-  "tr-ssh-port": "SSH連接埠",
-  "tr-flow-offloading-type": "流量卸載類型",
-  "tr-restore-backup-path": "還原備份路徑",
-  "tr-wi-fi-configuration": "Wi-Fi設定",
-  "tr-wi-fi-mode": "Wi-Fi模式",
-  "tr-wi-fi-ssid": "Wi-Fi SSID",
-  "tr-wi-fi-password": "Wi-Fi密碼",
-  "tr-mobility-domain": "移動域",
-  "tr-min-snr": "最小SNR",
-  "tr-standard": "標準",
-  "tr-usteer": "Usteer",
-  "tr-disabled": "停用",
-  "tr-wifi-optimization-disabled": "Wi-Fi已停用",
-  "tr-internet-connection": "網際網路連線",
-  "tr-connection-type": "連線類型",
-  "tr-auto": "自動",
-  "tr-pppoe": "PPPoE",
-  "tr-dslite": "DS-Lite",
-  "tr-mape": "MAP-E",
-  "tr-ap": "AP模式",
-  "tr-auto-detection": "自動偵測",
-  "tr-dhcp": "DHCP",
-  "tr-pppoe-credentials": "PPPoE認證資訊",
-  "tr-pppoe-username": "使用者名稱",
-  "tr-pppoe-password": "密碼",
-  "tr-ds-lite-settings": "DS-Lite設定",
-  "tr-dslite-aftr-type": "AFTR類型",
-  "tr-dslite-area": "地區",
-  "tr-dslite-aftr-ipv6-address": "AFTR位址",
-  "tr-dslite-notice1": "注意: 實際值可能會有所不同。",
-  "tr-mape-type": "位址類型",
-  "tr-br": "對等位址 (BR)",
-  "tr-ea-len": "EA長度",
-  "tr-ipv4-prefix": "IPv4位址",
-  "tr-ipv4-prefix-length": "IPv4字首長度",
-  "tr-ipv4-prefix-range": "IPv4字首範圍",
-  "tr-ipv6-prefix": "IPv6字首",
-  "tr-ipv6-prefix-range": "IPv6字首範圍",
-  "tr-psid-offset": "PSID位移",
-  "tr-psid-length": "PSID長度",
-  "tr-gua-prefix": "GUA字首",
-  "tr-mape-notice1": "注意: 實際值可能會有所不同。",
-  "tr-mape-notice2": "注意: 連接埠 1-1023 為特權連接埠。詳情請諮詢您的ISP。",
-  "tr-ap-network-settings": "AP網路設定",
-  "tr-ap-ip-address": "IP位址",
-  "tr-ap-gateway": "閘道",
-  "tr-tuning": "調整",
-  "tr-netopt-optimization": "動態網路最佳化",
-  "tr-netopt-optimization-disabled": "最佳化已停用",
-  "tr-manual": "手動",
-  "tr-auto-mode": "自動模式",
-  "tr-auto-optimization": "自動最佳化",
-  "tr-manual-mode": "手動模式",
-  "tr-manual-settings": "手動設定",
-  "tr-tcp-read-memory": "TCP讀取記憶體",
-  "tr-tcp-write-memory": "TCP寫入記憶體",
-  "tr-connection-tracking-max": "連線追蹤最大值",
-  "tr-network-device-backlog": "網路裝置積壓",
-  "tr-socket-max-connections": "通訊端最大連線數",
-  "tr-tcp-congestion-control": "TCP擁塞控制",
-  "tr-cubic-default": "cubic(預設)",
-  "tr-bbr": "BBR",
-  "tr-reno": "Reno",
-  "tr-disabled-mode": "停用模式",
-  "tr-basic-system-features": "基本系統功能",
-  "tr-system-management": "系統管理",
-  "tr-network-management": "網路管理",
-  "tr-wifi-management": "Wi-Fi管理",
-  "tr-modem-support": "數據機支援",
-  "tr-security-tools": "安全工具",
-  "tr-system-monitoring": "系統監控",
-  "tr-diagnostic-tools": "網路診斷工具",
-  "tr-system-tools": "系統管理工具",
-  "tr-themes-dashboard": "主題和儀表板",
-  "tr-utilities": "實用工具",
-  "tr-usb-storage": "USB儲存支援",
-  "tr-file-sharing": "檔案共享",
-  "tr-dns-privacy": "DNS & 隱私",
-  "tr-dnsmasq-settings": "DNS伺服器最佳化",
-  "tr-dnsmasq-mode": "DNS伺服器模式",
-  "tr-dnsmasq-auto": "自動",
-  "tr-dnsmasq-manual": "手動",
-  "tr-dnsmasq-disabled": "停用",
-  "tr-dnsmasq-cache": "快取大小",
-  "tr-dnsmasq-negcache": "負面快取",
-  "tr-dnsmasq-auto-optimization": "自動最佳化",
-  "tr-dnsmasq-optimization-disabled": "最佳化已停用",
-  "tr-feedback-link": "論壇",
-  "tr-tui-main-menu": "主選單",
-  "tr-tui-select": "選擇",
-  "tr-tui-back": "返回",
-  "tr-tui-exit": "離開",
-  "tr-tui-yes": "是",
-  "tr-tui-no": "否",
-  "tr-tui-ok": "確定",
-  "tr-tui-cancel": "取消",
-  "tr-tui-review-configuration": "檢視並套用設定",
-  "tr-tui-view-device-info": "檢視裝置資訊",
-  "tr-tui-view-package-list": "檢視軟體包清單",
-  "tr-tui-view-config-vars": "檢視設定變數",
-  "tr-tui-view-postinst": "檢視postinst.sh",
-  "tr-tui-view-setup": "檢視setup.sh",
-  "tr-tui-apply-config": "套用設定",
-  "tr-tui-device-information": "裝置資訊",
-  "tr-tui-package-list": "軟體包清單",
-  "tr-tui-config-vars": "設定變數",
-  "tr-tui-no-packages": "未選擇軟體包",
-  "tr-tui-no-config-vars": "未設定設定變數",
-  "tr-tui-postinst-not-found": "找不到postinst.sh檔案",
-  "tr-tui-setup-not-found": "找不到setup.sh檔案",
-  "tr-tui-apply-confirm": "套用此設定？\n\n將執行以下操作：\n1. 透過postinst.sh安裝軟體包\n2. 透過setup.sh套用設定\n3. 選擇性重新啟動\n\n繼續？",
-  "tr-tui-installing-packages": "正在執行軟體包安裝...",
-  "tr-tui-applying-config": "正在套用系統設定...",
-  "tr-tui-config-applied": "設定套用成功！\n\n立即重新啟動？",
-  "tr-tui-auto-config-applied": "自動設定已套用！",
-  "tr-tui-use-auto-config": "使用此自動偵測的設定？",
-  "tr-tui-package-categories": "軟體包類別",
-  "tr-tui-select-category": "選擇類別:",
-  "tr-tui-space-toggle": "空白鍵=切換",
-  "tr-tui-ui-mode-select": "選擇UI模式:",
-  "tr-tui-ui-whiptail": "whiptail (對話框式TUI)",
-  "tr-tui-ui-simple": "simple (清單式TUI)",
-  "tr-tui-ui-choice": "選擇",
-  "tr-tui-ui-installing": "正在安裝whiptail...",
-  "tr-tui-ui-install-success": "whiptail安裝成功！",
-  "tr-tui-ui-install-failed": "安裝失敗，使用simple模式",
-  "tr-tui-gua": "GUA",
-  "tr-tui-pd": "PD"
+    "tr-custom-packages": "已安裝的套件",
+    "tr-custom-defaults": "首次啟動時執行的腳本 (uci-defaults)",
+    "tr-postinst": "Postinst（套件安裝腳本）",
+    "tr-uci": "UCI-defaults（啟動配置腳本）",
+    "tr-package-search": "套件搜尋",
+    "tr-add-commands": "新增命令",
+    "tr-base-size": "基礎",
+    "tr-added-size": "已新增",
+    "tr-total-size": "總計",
+    "tr-package-size-snapshot-unavailable": "※ SNAPSHOT版本不提供套件大小資訊",
+    "tr-package-size-note": "※ 不包含語言和相依套件",
+    "tr-uci-size-limit": "※ 檔案大小限制：20480 位元組：20.00 KB",
+    
+    "tr-import-settings": "匯入",
+    "tr-export-settings": "匯出",
+    
+    "tr-asu-status-checking": "檢查中...",
+    "tr-asu-status-online": "線上",
+    "tr-asu-status-offline": "離線",
+    "tr-asu-status-error": "錯誤",
+    "tr-asu-status-200": "ASU 伺服器可存取。狀態：{status}",
+    "tr-asu-status-500": "ASU 伺服器回應了內部錯誤。狀態：{status}",
+    "tr-asu-status-unreachable": "ASU 伺服器回應了意外狀態。狀態：{status}",
+    "tr-asu-status-networkfail": "無法存取 ASU 伺服器：{error}",
+    
+    "tr-extended-info": "地區和 ISP 資訊",
+    "tr-loading": "載入中…",
+    "tr-notice": "通知",
+    "tr-country": "地區",
+    "tr-timezone": "時區",
+    "tr-zonename": "區域名稱",
+    "tr-isp": "ISP",
+    "tr-as": "AS 號碼",
+    "tr-ip-address": "位址",
+    "tr-method": "連線類型",
+
+    "tr-basic-configuration": "基本配置",
+    "tr-language": "語言",
+    "tr-device-name": "裝置名稱",
+    "tr-root-password": "Root 密碼",
+    "tr-lan-ipv4-address": "LAN IPv4 位址",
+    "tr-lan-ipv6-address": "LAN IPv6 位址",
+    "tr-ssh-interface": "SSH 介面",
+    "tr-ssh-port": "SSH 連接埠",
+    "tr-flow-offloading-type": "流量卸載類型",
+    "tr-restore-backup-path": "還原備份路徑",
+
+    "tr-wi-fi-configuration": "Wi-Fi 配置",
+    "tr-wi-fi-mode": "Wi-Fi 模式",
+    "tr-wi-fi-ssid": "Wi-Fi SSID",
+    "tr-wi-fi-password": "Wi-Fi 密碼",
+    "tr-mobility-domain": "移動網域",
+    "tr-min-snr": "最小 SNR",
+    "tr-standard": "標準",
+    "tr-usteer": "Usteer",
+    "tr-disabled": "停用",
+    "tr-wifi-optimization-disabled": "Wi-Fi 已停用",
+    
+    "tr-internet-connection": "網際網路連線",
+    "tr-connection-type": "連線類型",
+    "tr-auto": "自動",
+    "tr-pppoe": "PPPoE",
+    "tr-dslite": "DS-Lite",
+    "tr-mape": "MAP-E",
+    "tr-ap": "AP 模式",
+
+    "tr-auto-detection": "自動偵測",
+    "tr-dhcp": "DHCP",
+
+    "tr-pppoe-credentials": "PPPoE 憑證",
+    "tr-pppoe-username": "使用者名稱",
+    "tr-pppoe-password": "密碼",
+
+    "tr-dslite-settings": "DS-Lite 設定",
+    "tr-dslite-aftr-type": "AFTR 類型",
+    "tr-dslite-area": "地區",
+    "tr-dslite-aftr-ipv6-address": "AFTR 位址",
+    "tr-dslite-notice1": "注意：實際值可能有所不同。",
+
+    "tr-mape-type": "位址類型",
+    "tr-br": "對等位址 (BR)",
+    "tr-ea-len": "EA 長度",
+    "tr-ipv4-prefix": "IPv4 位址",
+    "tr-ipv4-prefix-length": "IPv4 前綴長度",
+    "tr-ipv4-prefix-range": "IPv4 前綴範圍",
+    "tr-ipv6-prefix": "IPv6 前綴",
+    "tr-ipv6-prefix-range": "IPv6 前綴範圍",
+    "tr-psid-offset": "PSID 偏移",
+    "tr-psid-length": "PSID 長度",
+    "tr-gua-prefix": "GUA 前綴",
+    "tr-mape-notice1": "注意：實際值可能有所不同。",
+    "tr-mape-notice2": "注意：連接埠號碼 1-1023 為特權連接埠。詳情請洽詢您的 ISP。",
+
+    "tr-ap-network-settings": "AP 網路設定",
+    "tr-ap-ip-address": "IP 位址",
+    "tr-ap-gateway": "閘道",
+
+    "tr-tuning": "調校",
+    "tr-netopt-optimization": "動態網路最佳化",
+    "tr-netopt-optimization-disabled": "最佳化已停用",
+    "tr-manual": "手動",
+    "tr-auto-mode": "自動模式",
+    "tr-auto-optimization": "自動最佳化",
+    "tr-manual-mode": "手動模式",
+    "tr-manual-settings": "手動設定",
+    "tr-tcp-read-memory": "TCP 讀取記憶體",
+    "tr-tcp-write-memory": "TCP 寫入記憶體",
+    "tr-connection-tracking-max": "連線追蹤最大值",
+    "tr-network-device-backlog": "網路裝置積壓",
+    "tr-socket-max-connections": "通訊端最大連線數",
+    "tr-tcp-congestion-control": "TCP 壅塞控制",
+    "tr-cubic-default": "cubic（預設）",
+    "tr-bbr": "BBR",
+    "tr-reno": "Reno",
+    "tr-disabled-mode": "停用模式",
+
+    "tr-basic-system-features": "基本系統功能",
+    "tr-system-management": "系統管理",
+    "tr-network-management": "網路管理",
+    "tr-wifi-management": "Wi-Fi 管理",
+    "tr-modem-support": "數據機支援",
+    "tr-security-tools": "安全工具",
+    "tr-system-monitoring": "系統監控",
+    "tr-diagnostic-tools": "網路診斷工具",
+    "tr-system-tools": "系統管理工具",
+    "tr-themes-dashboard": "佈景主題和儀表板",
+    "tr-utilities": "實用工具",
+    "tr-usb-storage": "USB 儲存支援",
+    "tr-file-sharing": "檔案共用",
+    "tr-dns-privacy": "DNS 和隱私",
+    
+    "tr-dnsmasq-settings": "DNS 伺服器最佳化",
+    "tr-dnsmasq-mode": "DNS 伺服器模式",
+    "tr-dnsmasq-auto": "自動",
+    "tr-dnsmasq-manual": "手動",
+    "tr-dnsmasq-disabled": "停用",
+    "tr-dnsmasq-cache": "快取大小",
+    "tr-dnsmasq-negcache": "負快取",
+    "tr-dnsmasq-auto-optimization": "自動最佳化",
+    "tr-dnsmasq-optimization-disabled": "最佳化已停用",
+
+    "tr-feedback-link": "論壇",
+
+    "tr-tui-main-menu": "主選單",
+    "tr-tui-select": "選擇",
+    "tr-tui-back": "返回",
+    "tr-tui-exit": "離開",
+    "tr-tui-yes": "是",
+    "tr-tui-no": "否",
+    "tr-tui-ok": "確定",
+    "tr-tui-cancel": "取消",
+    "tr-tui-choice": "選擇",
+    
+    "tr-tui-view-device-info": "檢視裝置資訊",
+    "tr-tui-view-package-list": "檢視套件清單",
+    "tr-tui-view-config-vars": "檢視配置變數",
+    "tr-tui-view-postinst": "檢視 postinst.sh",
+    "tr-tui-view-setup": "檢視 setup.sh",
+    "tr-tui-review-configuration": "檢視並套用配置",
+    "tr-tui-apply": "套用配置",
+    "tr-tui-no-packages": "未選擇套件",
+    "tr-tui-no-config-vars": "未設定配置變數",
+    "tr-tui-postinst-not-found": "找不到 postinst.sh 檔案",
+    "tr-tui-setup-not-found": "找不到 setup.sh 檔案",
+    "tr-tui-apply-confirm-title": "將執行以下操作：",
+    "tr-tui-apply-confirm-step1": "1. 透過 postinst.sh 安裝套件",
+    "tr-tui-apply-confirm-step2": "2. 透過 setup.sh 套用設定",
+    "tr-tui-apply-confirm-step3": "3. 重新啟動（需確認）",
+    "tr-tui-apply-confirm-question": "現在執行嗎？",
+    "tr-tui-installing-packages": "正在安裝套件",
+    "tr-tui-applying-config": "正在套用系統配置",
+    "tr-tui-config-applied": "配置套用成功！",
+    "tr-tui-reboot-question": "現在重新啟動嗎？",
+    "tr-tui-auto-config-applied": "已套用自動配置！",
+    "tr-tui-use-auto-config": "使用此自動偵測的配置嗎？",
+    
+    "tr-tui-space-toggle": "空白鍵=切換",
+    
+    "tr-tui-ui-mode-select": "選擇 UI 模式：",
+    "tr-tui-ui-whiptail": "whiptail（基於對話方塊的 TUI）",
+    "tr-tui-ui-simple": "simple（基於清單的 TUI）",
+    "tr-tui-ui-choice": "選擇",
+    "tr-tui-ui-installing": "正在安裝 whiptail",
+    "tr-tui-ui-install-success": "whiptail 安裝成功！",
+    "tr-tui-ui-install-failed": "安裝失敗，使用簡單模式",
+    "tr-tui-gua": "GUA",
+    "tr-tui-pd": "PD"
 }
